--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Pritom Mozumdar"
   pronouns         : # example: "she/her"  
-  bio              : "Postdocal Researcher, UCLA"
+  bio              : "Postdoctoral Researcher, UCLA"
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
