--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "pmozumdar/pmozumdar.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile_pic.JPG"
   name             : "Pritom Mozumdar"
   pronouns         : # example: "she/her"  
   bio              : "Postdoctoral Researcher, UCLA"
